# bibtex-generaattori

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  run_robot_tests.sh
.github/workflows/: main.yml
src/: app.py  functions.py  generate_key.py  init.py  references.bib  routes.py  services.py
src/static/CSS/: main.css
src/templates/: check_references.html  choose_reference_type.html  doi.html  index.html  layout.html  send_reference.html
src/tests/: __init__.py  bibtex_test.py  reference_list_test.py  resource.robot  resource_sample.robot  robottest.robot  robottest_sample.robot  test_unittest_sample.py  user_can_add_reference_type_book.robot
