[tool.poetry]
name = "bibtex-generaattori"
version = "0.1.0"
description = ""
authors = ["Roni Hokkanen <roni.hokkanen@protonmail.com>"]
readme = "README.md"
packages = [{include = "bibtex_generaattori"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
