[tool.poetry]
name = "bibtex-generaattori"
version = "0.1.0"
description = ""
authors = ["Roni Hokkanen <roni.hokkanen@protonmail.com>"]
readme = "README.md"
packages = [{include = "bibtex-generaattori"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
python-dotenv = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
robotframework = "^6.0.1"
robotframework-seleniumlibrary = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
